Added a useful template that converts a primary arithmetic type to its gl enum equivalent.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ OUT= gl.bin
 all: gl
 	
 gl:
-	dmd -w -debug test/gl.d meta/utils/memory.d meta/utils/logger.d meta/utils/traits.d meta/utils/color.d meta/utils/runtime_error.d meta/utils/math/vecs.d meta/views/core/opengl/common.d meta/views/core/opengl/glfw.d meta/views/core/opengl/gl.d -of$(OUT) $(DLDFLAGS) $(INCLUDES)
+	dmd -w -debug test/gl.d meta/utils/memory.d meta/utils/logger.d meta/utils/traits.d meta/utils/color.d meta/utils/runtime_error.d meta/utils/math/vecs.d meta/views/core/opengl/common.d meta/views/core/opengl/glfw.d meta/views/core/opengl/gl.d meta/views/core/opengl/glsl.d -of$(OUT) $(DLDFLAGS) $(INCLUDES)
 
 clean:
 	@rm -rf *.o $(OUT)
